--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="anger-icon" type="image/x-icon" href="favicon.ico?v=2">
-    <title>Nicholas Rial | United States</title>
+    <title>Home | Nicholas Rial</title>
  </head>
  <body>
     <a href="/"><h1>Nicholas Rial Homepage</h1></a>
