created pages directory for file management

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
  <body>
     <a href="/"><h1>Nicholas Rial Homepage</h1></a>
 
-    <a href="about.html">About</a>
+    <a href="pages/about.html">About</a>
     <!-- hi mike -->
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias delectus possimus earum aperiam doloribus autem voluptatem magni consequuntur voluptatum porro adipisci reiciendis dolorum, iste culpa nostrum ullam quae vero voluptas!</p>
+    <script src="script.js"></script>
  </body>
  </html>   
