added media directory and placeholder video

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <a href="pages/about.html">About</a>
     <!-- hi mike -->
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias delectus possimus earum aperiam doloribus autem voluptatem magni consequuntur voluptatum porro adipisci reiciendis dolorum, iste culpa nostrum ullam quae vero voluptas!</p>
+
+    <video controls width="250">
+  <source src="media/utini.mp4" type="video/mp4" />
+    </video>
     <script src="script.js"></script>
  </body>
  </html>   
