--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale 1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="anger-icon" type="image/x-icon" href="favicon.ico?v=2">
-        <title>About Page</title>
+        <title>Contact</title>
     </head>
 <body> 
-    <h1>About Page</h1>
+    <a href="/">
+        <h1>Nicholas Rial Homepage</h1>
+    </a>
+    <h1>Contact</h1>
 </body>
 </html>
