organized media files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="anger-icon" type="image/x-icon" href="favicon.ico?v=2">
+    <link rel="anger-icon" type="image/x-icon" href="./media/favicon.ico?v=2">
     <title>Home | Nicholas Rial</title>
 </head>
 
@@ -14,14 +14,14 @@
         <h1>Nicholas Rial Homepage</h1>
     </a>
 
-    <a href="pages/contact.html">Contact</a>
+    <a href="./pages/contact.html">Contact</a>
     <!-- hi mike -->
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias delectus possimus earum aperiam doloribus
         autem voluptatem magni consequuntur voluptatum porro adipisci reiciendis dolorum, iste culpa nostrum ullam quae
         vero voluptas!</p>
 
     <video controls width="250">
-        <source src="media/utini.mp4" type="video/mp4" />
+        <source src="./media/utinni.mp4" type="video/mp4" />
     </video>
     <script src="script.js"></script>
 </body>
