--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="anger-icon" type="image/x-icon" href="favicon.ico?v=2">
+    <link rel="anger-icon" type="image/x-icon" href="./media/favicon.ico?v=2">
     <title>Contact</title>
 </head>
 
