changed elements and colors for links, changed header on home, removed lorem

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,9 +16,9 @@
 
 <body>
     <a href="/">
-        <h1>Nicholas Rial Homepage</h1>
+        <span>Nicholas Rial Homepage</span>
     </a>
-    <h1>Contact</h1>
+    <h1>CONTACT</h1>
 </body>
 
 </html>
