--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 <body>
     <a href="/">
-        <h1>Nicholas Rial Homepage</h1>
+        <span>Nicholas Rial Homepage</span>
     </a>
 
-    <a href="./pages/contact.html">Contact</a>
+    <a href="./pages/contact.html">
+        <span>Contact</span>
+    </a>
     <!-- hi mike -->
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias delectus possimus earum aperiam doloribus
-        autem voluptatem magni consequuntur voluptatum porro adipisci reiciendis dolorum, iste culpa nostrum ullam quae
-        vero voluptas!</p>
+    <h1>DEMO REEL</h1>
 
     <video controls width="250">
         <source src="./media/utinni.mp4" type="video/mp4" />
