--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,6 +18,18 @@
     <a href="/">
         <span>Nicholas Rial Homepage</span>
     </a>
+
+    <a href="./projects.html">
+        <span>Projects</span>
+    </a>
+
+    <a href="./music.html">
+        <span>Music</span>
+    </a>
+
+    <a href="./contact.html">
+        <span>Contact</span>
+    </a>
     <h1>CONTACT</h1>
 </body>
 
