--- a/pages/music.html
+++ b/pages/music.html
@@ -9,9 +9,9 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="anger-icon" type="image/x-icon" href="./media/favicon.ico?v=2">
-    <title>Home | Nicholas Rial</title>
+    <title>Music | Nicholas Rial</title>
 </head>
 
 <body>
@@ -19,24 +19,18 @@
         <span>Nicholas Rial Homepage</span>
     </a>
 
-    <a href="./pages/projects.html">
+    <a href="./projects.html">
         <span>Projects</span>
     </a>
 
-    <a href="./pages/music.html">
+    <a href="./music.html">
         <span>Music</span>
     </a>
 
-    <a href="./pages/contact.html">
+    <a href="./contact.html">
         <span>Contact</span>
     </a>
-    <!-- hi mike -->
-    <h1>DEMO REEL</h1>
-
-    <video controls width="250">
-        <source src="./media/utinni.mp4" type="video/mp4" />
-    </video>
-    <script src="script.js"></script>
+    <h1>MUSIC</h1>
 </body>
 
 </html>
