--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,6 +31,9 @@
         <span>Contact</span>
     </a>
     <h1>CONTACT</h1>
+    <p>
+        rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
+    </p>
 </body>
 
 </html>
