added media and audio player to music page

--- a/pages/music.html
+++ b/pages/music.html
@@ -31,6 +31,10 @@
         <span>Contact</span>
     </a>
     <h1>MUSIC</h1>
+    <figure>
+        <figcaption>A First Time For Everything</figcaption>
+        <audio controlslist= nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
+      </figure>
 </body>
 
 </html>
