added hyperlink to SLUGMODE  itch.io page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,6 +31,10 @@
         <span>Contact</span>
     </a>
     <h1>PROJECTS</h1>
+<h2>SLUGMODE</h2>
+    <a href="https://drillsoftgames.itch.io/slug-mode">
+        <img src="../anger.jpg" alt="angry man">
+    </a>
 </body>
 
 </html>
