added target and rel attributes to hyperlinki

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,8 +31,8 @@
         <span>Contact</span>
     </a>
     <h1>PROJECTS</h1>
-<h2>SLUGMODE</h2>
-    <a href="https://drillsoftgames.itch.io/slug-mode">
+    <h2>SLUGMODE</h2>
+    <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
         <img src="../anger.jpg" alt="angry man">
     </a>
 </body>
