added figure element to project links

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,10 +31,18 @@
         <span>Contact</span>
     </a>
     <h1>PROJECTS</h1>
-    <h2>SLUGMODE</h2>
+    <figure>
+    <figcaption>SLUGMODE</figcaption>
     <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
         <img src="../anger.jpg" alt="angry man">
     </a>
+    </figure>
+    <figure>
+    <figcaption>MAX X TEN</figcaption>
+    <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
+        <img src="../anger.jpg" alt="angry man">
+    </a>
+</figure>
 </body>
 
 </html>
