removed unnecessary span elements

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
 <body>
     <a href="/">
-        <span>Nicholas Rial Homepage</span>
+        Nicholas Rial
     </a>
 
     <a href="./pages/projects.html">
-        <span>Projects</span>
+        Projects
     </a>
 
     <a href="./pages/music.html">
-        <span>Music</span>
+        Music
     </a>
 
     <a href="./pages/contact.html">
-        <span>Contact</span>
+        Contact
     </a>
     <!-- hi mike -->
     <h1>DEMO REEL</h1>
