--- a/pages/music.html
+++ b/pages/music.html
@@ -16,19 +16,19 @@
 
 <body>
     <a href="/">
-        <span>Nicholas Rial Homepage</span>
+        Nicholas Rial
     </a>
 
     <a href="./projects.html">
-        <span>Projects</span>
+        Projects
     </a>
 
     <a href="./music.html">
-        <span>Music</span>
+        Music
     </a>
 
     <a href="./contact.html">
-        <span>Contact</span>
+        Contact
     </a>
     <h1>MUSIC</h1>
     <figure>
