--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,33 +16,33 @@
 
 <body>
     <a href="/">
-        <span>Nicholas Rial Homepage</span>
+        Nicholas Rial
     </a>
 
     <a href="./projects.html">
-        <span>Projects</span>
+        Projects
     </a>
 
     <a href="./music.html">
-        <span>Music</span>
+        Music
     </a>
 
     <a href="./contact.html">
-        <span>Contact</span>
+        Contact
     </a>
     <h1>PROJECTS</h1>
     <figure>
-    <figcaption>SLUGMODE</figcaption>
-    <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
-        <img src="../anger.jpg" alt="angry man">
-    </a>
+        <figcaption>SLUGMODE</figcaption>
+        <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
+            <img src="../anger.jpg" alt="angry man">
+        </a>
     </figure>
     <figure>
-    <figcaption>MAX X TEN</figcaption>
-    <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
-        <img src="../anger.jpg" alt="angry man">
-    </a>
-</figure>
+        <figcaption>MAX X TEN</figcaption>
+        <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
+            <img src="../anger.jpg" alt="angry man">
+        </a>
+    </figure>
 </body>
 
 </html>
