added nav element and class to page links

--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
 </head>
 
 <body>
+    <nav class="top-navigation">
     <a href="/">
         Nicholas Rial
     </a>
-
     <a href="./pages/projects.html">
         Projects
     </a>
-
     <a href="./pages/music.html">
         Music
     </a>
-
     <a href="./pages/contact.html">
         Contact
     </a>
+</nav>
     <!-- hi mike -->
     <h1>DEMO REEL</h1>
 
