--- a/pages/music.html
+++ b/pages/music.html
@@ -15,21 +15,20 @@
 </head>
 
 <body>
+    <nav class="top-navigation">
     <a href="/">
         Nicholas Rial
     </a>
-
     <a href="./projects.html">
         Projects
     </a>
-
     <a href="./music.html">
         Music
     </a>
-
     <a href="./contact.html">
         Contact
     </a>
+</nav>
     <h1>MUSIC</h1>
     <figure>
         <figcaption>A First Time For Everything</figcaption>
