created specific-nav class and adjusted margin left of class mentioned

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 
 <body>
     <nav class="top-navigation">
-    <a href="/">
-        Nicholas Rial
-    </a>
-    <a href="./pages/projects.html">
-        Projects
-    </a>
-    <a href="./pages/music.html">
-        Music
-    </a>
-    <a href="./pages/contact.html">
-        Contact
-    </a>
-</nav>
+        <a href="/">
+            <span class="Nicholas Rial">Nicholas Rial</span>
+        </a>
+        <span class="specific-nav">
+            <a href="./pages/projects.html">
+                <span class="Projects">Projects</span>
+            </a>
+            <a href="./pages/music.html">
+                <span class="Music">Music</span>
+            </a>
+            <a href="./pages/contact.html">
+                <span class="Contact">Contact</span>
+            </a>
+        </span>
+    </nav>
     <!-- hi mike -->
     <h1>DEMO REEL</h1>
 
