copy-pasted new specific-nav code to other pages

--- a/pages/music.html
+++ b/pages/music.html
@@ -17,17 +17,19 @@
 <body>
     <nav class="top-navigation">
         <a href="/">
-            Nicholas Rial
+            <span class="Nicholas Rial">Nicholas Rial</span>
         </a>
-        <a href="./projects.html">
-            Projects
-        </a>
-        <a href="./music.html">
-            Music
-        </a>
-        <a href="./contact.html">
-            Contact
-        </a>
+        <span class="specific-nav">
+            <a href="./projects.html">
+                <span class="Projects">Projects</span>
+            </a>
+            <a href="./music.html">
+                <span class="Music">Music</span>
+            </a>
+            <a href="./contact.html">
+                <span class="Contact">Contact</span>
+            </a>
+        </span>
     </nav>
     <h1>MUSIC</h1>
     <figure>
