updated elements and added classes to the top navigation section

--- a/index.html
+++ b/index.html
@@ -15,29 +15,28 @@
 </head>
 
 <body>
-    <nav class="top-navigation">
-        <a href="/">
-            <span class="Nicholas Rial">Nicholas Rial</span>
-        </a>
-        <span class="specific-nav">
-            <a href="./pages/projects.html">
-                <span class="Projects">Projects</span>
-            </a>
-            <a href="./pages/music.html">
-                <span class="Music">Music</span>
-            </a>
-            <a href="./pages/contact.html">
-                <span class="Contact">Contact</span>
-            </a>
-        </span>
-    </nav>
-    <!-- hi mike -->
-    <h1>DEMO REEL</h1>
+    <header class="site-header">
+        <a class="logo" href="/">Nicholas Rial</a>
+        <nav class="top-navigation">
+            <ul class="navigation-list">
+                <li>
+                    <a class="navigation-link" href="./pages/projects.html">Projects</a>
+                </li>
+                <li>
+                    <a class= "navigation-link" href="/pages/music.html">Music</a>
+                </li>
+                <li>
+                    <a class= "navigation-link" href="/pages/contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- hi mike -->
+        <h1>DEMO REEL</h1>
 
-    <video controls width="250">
-        <source src="./media/utinni.mp4" type="video/mp4" />
-    </video>
-    <script src="script.js"></script>
+        <video controls width="250">
+            <source src="./media/utinni.mp4" type="video/mp4" />
+        </video>
+        <script src="script.js"></script>
 </body>
 
 </html>
