--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
                     <a class="navigation-link" href="./pages/projects.html">Projects</a>
                 </li>
                 <li>
-                    <a class= "navigation-link" href="/pages/music.html">Music</a>
+                    <a class="navigation-link" href="/pages/music.html">Music</a>
                 </li>
                 <li>
-                    <a class= "navigation-link" href="/pages/contact.html">Contact</a>
+                    <a class="navigation-link" href="/pages/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
-        <!-- hi mike -->
-        <h1>DEMO REEL</h1>
-
-        <video controls width="250">
-            <source src="./media/utinni.mp4" type="video/mp4" />
-        </video>
-        <script src="script.js"></script>
+    </header>
+    <!-- hi mike -->
+    
+    <section class="demo-reel">
+        <h1 class="home-title">DEMO REEL</h1>
+    <video controls width="250">
+        <source src="./media/utinni.mp4" type="video/mp4" />
+    </video>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
