reformatted pages to resemble home page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,22 +15,22 @@
 </head>
 
 <body>
-    <nav class="top-navigation">
-        <a href="/">
-            <span class="Nicholas Rial">Nicholas Rial</span>
-        </a>
-        <span class="specific-nav">
-            <a href="./projects.html">
-                <span class="Projects">Projects</span>
-            </a>
-            <a href="./music.html">
-                <span class="Music">Music</span>
-            </a>
-            <a href="./contact.html">
-                <span class="Contact">Contact</span>
-            </a>
-        </span>
-    </nav>
+    <header class="site-header">
+        <a class="logo" href="/">Nicholas Rial</a>
+        <nav class="top-navigation">
+            <ul class="navigation-list">
+                <li>
+                    <a class="navigation-link" href="./projects.html">Projects</a>
+                </li>
+                <li>
+                    <a class="navigation-link" href="./music.html">Music</a>
+                </li>
+                <li>
+                    <a class="navigation-link" href="/contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <h1>PROJECTS</h1>
     <figure>
         <figcaption>SLUGMODE</figcaption>
