added section element to all pages, added style to sections

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,10 +31,12 @@
             </ul>
         </nav>
     </header>
-    <h1>CONTACT</h1>
-    <p>
-        rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
-    </p>
+    <section class="main-section">
+        <h1 class="section-title">CONTACT</h1>
+        <p>
+            rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
+        </p>
+    </section>
 </body>
 
 </html>
