--- a/pages/music.html
+++ b/pages/music.html
@@ -31,11 +31,14 @@
             </ul>
         </nav>
     </header>
-    <h1>MUSIC</h1>
-    <figure>
-        <figcaption>A First Time For Everything</figcaption>
-        <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
-    </figure>
+
+    <section class="main-section">
+        <h1 class="section-title">MUSIC</h1>
+        <figure>
+            <figcaption class="track-title">A First Time For Everything</figcaption>
+            <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
+        </figure>
+    </section>
 </body>
 
 </html>
