--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,24 +26,33 @@
                     <a class="navigation-link" href="./music.html">Music</a>
                 </li>
                 <li>
-                    <a class="navigation-link" href="/contact.html">Contact</a>
+                    <a class="navigation-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <h1>PROJECTS</h1>
-    <figure>
-        <figcaption>SLUGMODE</figcaption>
-        <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
-            <img src="../anger.jpg" alt="angry man">
-        </a>
-    </figure>
-    <figure>
-        <figcaption>MAX X TEN</figcaption>
-        <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
-            <img src="../anger.jpg" alt="angry man">
-        </a>
-    </figure>
+
+    <section class="main-section">
+    <h1 class="section-title">PROJECTS</h1>
+    <ul class="game-list">
+        <li>
+            <figure>
+                <figcaption>SLUGMODE</figcaption>
+                <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
+                    <img src="../anger.jpg" alt="angry man">
+                </a>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <figcaption>MAX X TEN</figcaption>
+                <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
+                    <img src="../anger.jpg" alt="angry man">
+                </a>
+            </figure>
+        </li>
+    </ul>
+    </section>
 </body>
 
 </html>
