--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </header>
     <!-- hi mike -->
     
-    <section class="demo-reel">
-        <h1 class="home-title">DEMO REEL</h1>
+    <section class="main-section">
+        <h1 class="section-title">DEMO REEL</h1>
     <video controls width="250">
         <source src="./media/utinni.mp4" type="video/mp4" />
     </video>
