adjusted titles for media, added hover effects to game links

--- a/pages/music.html
+++ b/pages/music.html
@@ -35,8 +35,8 @@
     <section class="main-section">
         <h1 class="section-title">MUSIC</h1>
         <figure>
-            <figcaption class="track-title">A First Time For Everything</figcaption>
             <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
+            <figcaption class="media-title">A First Time For Everything</figcaption>
         </figure>
     </section>
 </body>
