--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,18 +36,18 @@
     <h1 class="section-title">PROJECTS</h1>
     <ul class="game-list">
         <li>
-            <figure>
-                <figcaption>SLUGMODE</figcaption>
-                <a href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
+            <figure>                
+                <a class="game-link" href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
                     <img src="../anger.jpg" alt="angry man">
+                    <figcaption class="media-title">SLUGMODE</figcaption>
                 </a>
             </figure>
         </li>
         <li>
-            <figure>
-                <figcaption>MAX X TEN</figcaption>
-                <a href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
+            <figure>                
+                <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
                     <img src="../anger.jpg" alt="angry man">
+                    <figcaption class="media-title">MAX X TEN</figcaption>
                 </a>
             </figure>
         </li>
