added border radius to links and margin top to main section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="main-section">
         <h1 class="section-title">DEMO REEL</h1>
     <video controls width="250">
-        <source src="./media/utinni.mp4" type="video/mp4" />
+        <source src="./media/gibbonface.mp4" type="video/mp4" />
     </video>
     </section>
     <script src="script.js"></script>
