added media to music page and flex container property to music container

--- a/pages/music.html
+++ b/pages/music.html
@@ -34,10 +34,16 @@
 
     <section class="main-section">
         <h1 class="section-title">MUSIC</h1>
-        <figure>
-            <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
-            <figcaption class="media-title">A First Time For Everything</figcaption>
-        </figure>
+        <div class="music-container">
+            <figure>
+                <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
+                <figcaption class="media-title"><strong>First Time For Everything</strong></figcaption>
+            </figure>
+            <figure>
+                <audio controlslist=nodownload controls src="/media/disco-slug.ogg"></audio>
+                <figcaption class="media-title"> <strong>Disco Slug</strong></figcaption>
+            </figure>
+        </div>
     </section>
 </body>
 
