added media to music page, adjusted style of  media-title

--- a/pages/music.html
+++ b/pages/music.html
@@ -37,11 +37,15 @@
         <div class="music-container">
             <figure>
                 <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
-                <figcaption class="media-title"><strong>First Time For Everything</strong></figcaption>
+                <figcaption class="media-title">First Time For Everything</figcaption>
+            </figure>
+            <figure>
+                <audio controlslist=nodownload controls src="/media/the-meanderer.wav"></audio>
+                <figcaption class="media-title">The Meanderer</figcaption>
             </figure>
             <figure>
                 <audio controlslist=nodownload controls src="/media/disco-slug.ogg"></audio>
-                <figcaption class="media-title"> <strong>Disco Slug</strong></figcaption>
+                <figcaption class="media-title">Disco Slug</figcaption>
             </figure>
         </div>
     </section>
