began converting pixels values  to rems

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,8 @@
     </header>
     <section class="main-section">
         <h1 class="section-title">CONTACT</h1>
-        <p>
+        <a class="resume" href="/media/nicholas-rial-resume-2024.pdf" target="_blank" rel="noreffer noopener">Download Resume</a>
+        <p class="contact-text">
             rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
         </p>
     </section>
