--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     
     <section class="main-section">
         <h1 class="section-title">DEMO REEL</h1>
+    <div class="demo-reel">
     <video controls width="250">
         <source src="./media/gibbonface.mp4" type="video/mp4" />
     </video>
+    </div>
     </section>
     <script src="script.js"></script>
 </body>
