replaced and resized placeholder image for maxten

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,7 +46,7 @@
         <li>
             <figure>                
                 <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
-                    <img src="../anger.jpg" alt="angry man">
+                    <img src="../media/max-x-ten.png" height="400px" width="400px" alt="max x ten cover art">
                     <figcaption class="media-title">MAX X TEN</figcaption>
                 </a>
             </figure>
