added media, created record spin animation

--- a/pages/music.html
+++ b/pages/music.html
@@ -34,6 +34,9 @@
 
     <section class="main-section">
         <h1 class="section-title">MUSIC</h1>
+        <div class="image-container">
+            <img src="/media/record.png" alt="record disc" class="record" height="600px" width="600px">
+        </div>
         <div class="music-container">
             <figure>
                 <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
