--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,25 +33,27 @@
     </header>
 
     <section class="main-section">
-    <h1 class="section-title">PROJECTS</h1>
-    <ul class="game-list">
-        <li>
-            <figure>                
-                <a class="game-link" href="https://drillsoftgames.itch.io/slug-mode" target="_blank" rel="noreffer noopener">
-                    <img src="../anger.jpg" alt="angry man">
-                    <figcaption class="media-title">SLUGMODE</figcaption>
-                </a>
-            </figure>
-        </li>
-        <li>
-            <figure>                
-                <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank" rel="noreffer noopener">
-                    <img src="../media/max-x-ten.png" height="400px" width="400px" alt="max x ten cover art">
-                    <figcaption class="media-title">MAX X TEN</figcaption>
-                </a>
-            </figure>
-        </li>
-    </ul>
+        <h1 class="section-title">PROJECTS</h1>
+        <ul class="game-list">
+            <li>
+                <figure>
+                    <a class="game-link" href="https://drillsoftgames.itch.io/slug-mode" target="_blank"
+                        rel="noreffer noopener">
+                        <img src="../anger.jpg" height="300px" width="360px" alt="angry man">
+                        <figcaption class="media-title">SLUGMODE</figcaption>
+                    </a>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank"
+                        rel="noreffer noopener">
+                        <img src="../media/max-x-ten.png" height="300px" width="360px" alt="max x ten cover art">
+                        <figcaption class="media-title">MAX X TEN</figcaption>
+                    </a>
+                </figure>
+            </li>
+        </ul>
     </section>
 </body>
 
