added form element, formatted code

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,6 +37,9 @@
         <p class="contact-text">
             rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
         </p>
+        <form class="contact-form">
+            
+        </form>
     </section>
 </body>
 
