--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,12 +33,30 @@
     </header>
     <section class="main-section">
         <h1 class="section-title">CONTACT</h1>
-        <a class="resume" href="/media/nicholas-rial-resume-2024.pdf" target="_blank" rel="noreffer noopener">Download Resume</a>
+        <a class="resume" href="/media/nicholas-rial-resume-2024.pdf" target="_blank" rel="noreffer noopener">Download
+            Resume</a>
         <p class="contact-text">
             rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
         </p>
-        <form class="contact-form">
-            
+        <form action="https://formspree.io/f/xeqygdqw" method="POST" class="contact-form">
+            <label>
+                Name*
+                <input type="text" name="name" placeholder="Name">
+            </label>
+            <label>
+                Your email*
+                <input type="email" name="email">
+            </label>
+            <label>
+                Subject
+                <input type="text" name="subject" placeholder="Subject">
+            </label>
+            <label>
+                Your message*
+                <textarea name="message"></textarea>
+            </label>
+            <!-- your other form fields go here -->
+            <button type="submit" class="contact-submit">Send</button>
         </form>
     </section>
 </body>
