--- a/pages/music.html
+++ b/pages/music.html
@@ -35,19 +35,19 @@
     <section class="main-section">
         <h1 class="section-title">MUSIC</h1>
         <div class="image-container">
-            <img src="/media/record.png" alt="record disc" class="record" height="600px" width="600px">
+            <img src="/media/record.png" alt="record disc" class="record" height="600" width="600">
         </div>
         <div class="music-container">
             <figure>
-                <audio controlslist=nodownload controls src="/media/a-first-time-for-everything.wav"></audio>
+                <audio controlslist="nodownload" controls src="/media/a-first-time-for-everything.wav"></audio>
                 <figcaption class="media-title">First Time For Everything</figcaption>
             </figure>
             <figure>
-                <audio controlslist=nodownload controls src="/media/the-meanderer.wav"></audio>
+                <audio controlslist="nodownload" controls src="/media/the-meanderer.wav"></audio>
                 <figcaption class="media-title">The Meanderer</figcaption>
             </figure>
             <figure>
-                <audio controlslist=nodownload controls src="/media/disco-slug.ogg"></audio>
+                <audio controlslist="nodownload" controls src="/media/disco-slug.ogg"></audio>
                 <figcaption class="media-title">Disco Slug</figcaption>
             </figure>
         </div>
