--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,22 +36,18 @@
         <h1 class="section-title">PROJECTS</h1>
         <ul class="game-list">
             <li>
-                <figure>
-                    <a class="game-link" href="https://drillsoftgames.itch.io/slug-mode" target="_blank"
-                        rel="noreffer noopener">
-                        <img src="../anger.jpg" height="300px" width="360px" alt="angry man">
-                        <figcaption class="media-title">SLUGMODE</figcaption>
-                    </a>
-                </figure>
+                <a class="game-link" href="https://drillsoftgames.itch.io/slug-mode" target="_blank"
+                    rel="noreffer noopener">
+                    <img src="../anger.jpg" height="300" width="360" alt="angry man">
+                    <p class="media-title">SLUGMODE</p>
+                </a>
             </li>
             <li>
-                <figure>
-                    <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank"
-                        rel="noreffer noopener">
-                        <img src="../media/max-x-ten.png" height="300px" width="360px" alt="max x ten cover art">
-                        <figcaption class="media-title">MAX X TEN</figcaption>
-                    </a>
-                </figure>
+                <a class="game-link" href="https://drillsoftgames.itch.io/max-x-ten" target="_blank"
+                    rel="noreffer noopener">
+                    <img src="../media/max-x-ten.png" height="300" width="360" alt="max x ten cover art">
+                    <p class="media-title">MAX X TEN</p>
+                </a>
             </li>
         </ul>
     </section>
