--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 class="section-title">DEMO REEL</h1>
     <div class="demo-reel">
     <video controls width="250">
-        <source src="./media/gibbonface.mp4" type="video/mp4" />
+        <source src="./media/gibbonface.mp4" type="video/mp4">
     </video>
     </div>
     </section>
