styled form element

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,19 +40,15 @@
         </p>
         <form action="https://formspree.io/f/xeqygdqw" method="POST" class="contact-form">
             <label>
-                Name*
                 <input type="text" name="name" placeholder="Name">
             </label>
             <label>
-                Your email*
-                <input type="email" name="email">
+                <input type="email" name="email" placeholder="Email">
             </label>
             <label>
-                Subject
                 <input type="text" name="subject" placeholder="Subject">
             </label>
-            <label>
-                Your message*
+            <label class="contact-message">
                 <textarea name="message"></textarea>
             </label>
             <!-- your other form fields go here -->
