--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,17 +39,19 @@
             rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
         </p>
         <form action="https://formspree.io/f/xeqygdqw" method="POST" class="contact-form">
+            <div class="contact-info">
+                <label>
+                    <input type="text" name="name" placeholder="Name">
+                </label>
+                <label>
+                    <input type="email" name="email" placeholder="Email">
+                </label>
+                <label>
+                    <input type="text" name="subject" placeholder="Subject">
+                </label>
+            </div>
             <label>
-                <input type="text" name="name" placeholder="Name">
-            </label>
-            <label>
-                <input type="email" name="email" placeholder="Email">
-            </label>
-            <label>
-                <input type="text" name="subject" placeholder="Subject">
-            </label>
-            <label class="contact-message">
-                <textarea name="message"></textarea>
+                <textarea name="message" placeholder="Message..."></textarea>
             </label>
             <!-- your other form fields go here -->
             <button type="submit" class="contact-submit">Send</button>
