added div class to form button, styled form, updated contact page title

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,11 +35,11 @@
         <h1 class="section-title">CONTACT</h1>
         <a class="resume" href="/media/nicholas-rial-resume-2024.pdf" target="_blank" rel="noreffer noopener">Download
             Resume</a>
-        <p class="contact-text">
+        <p class="contact-owner-info">
             rialn27@gmail.com | Tel: 973-534-4349 | https://github.com/evilbob27
         </p>
         <form action="https://formspree.io/f/xeqygdqw" method="POST" class="contact-form">
-            <div class="contact-info">
+            <div class="contact-user-info">
                 <label>
                     <input type="text" name="name" placeholder="Name">
                 </label>
@@ -53,8 +53,9 @@
             <label>
                 <textarea name="message" placeholder="Message..."></textarea>
             </label>
-            <!-- your other form fields go here -->
-            <button type="submit" class="contact-submit">Send</button>
+            <div class="contact-button">
+                <button type="submit" class="contact-submit">Send</button>
+            </div>
         </form>
     </section>
 </body>
