padding to textarea

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="anger-icon" type="image/x-icon" href="./media/favicon.ico?v=2">
-    <title>Contact</title>
+    <title>Contact | Nicholas Rial</title>
 </head>
 
 <body>
