--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,13 +41,13 @@
         <form action="https://formspree.io/f/xeqygdqw" method="POST" class="contact-form">
             <div class="contact-user-info">
                 <label>
-                    <input type="text" name="name" placeholder="Name">
+                    <input type="text" name="name" placeholder="Name" required>
                 </label>
                 <label>
-                    <input type="email" name="email" placeholder="Email">
+                    <input type="email" name="email" placeholder="Email" required>
                 </label>
                 <label>
-                    <input type="text" name="subject" placeholder="Subject">
+                    <input type="text" name="subject" placeholder="Subject" required>
                 </label>
             </div>
             <label>
